--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ h1 {
   margin-right: 100px;
 }
 
+a {
+  text-decoration: none;
+}
+
 .logo {
   height: 50px;
   margin-left: 100px;
@@ -36,6 +40,7 @@ h1 {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  cursor: pointer;
 }
 
 .photographer_section article h2 {
@@ -49,6 +54,7 @@ h1 {
   margin: 0px;
 }
 .photographer_section article p {
+  color: black;
   font-size: 16px;
   margin: 0px;
 }
