add button focus effect

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -21,7 +21,8 @@
   cursor: pointer;
 }
 
-.contact_button:hover {
+.contact_button:hover,
+.contact_button:focus {
   background-color: #d3573c;
   color: black;
 }
