--- a/css/photographer.css
+++ b/css/photographer.css
@@ -20,6 +20,17 @@
   object-fit: cover;
 }
 
+.photograph-header h2 {
+  font-size: 36px;
+  color: #d3573c;
+  margin: 0;
+}
+
+.photograph-header h3 {
+  color: #901c1c;
+  font-weight: 200;
+}
+
 .contact_button {
   font-size: 20px;
   font-weight: bold;
