--- a/css/photographer.css
+++ b/css/photographer.css
@@ -104,3 +104,24 @@ form input {
   border: none;
   border-radius: 5px;
 }
+
+/* Media */
+
+.mediaDiv {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 70px;
+  margin-top: 100px;
+  padding: 0 100px;
+}
+
+.mediaDiv article h2 {
+  color: #901c1c;
+  font-size: 18px;
+}
+
+.mediaDiv article img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
