--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,3 +1,11 @@
+*{
+  max-width: 1900px;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+
+}
+
 #contact_modal {
   display: none;
 }
@@ -8,8 +16,7 @@
   padding: 0 50px;
   align-items: center;
   background-color: #fafafa;
-  height: 300px;
-  margin: 0 100px;
+  height: 300px;  
 }
 
 .photograph-header img {
@@ -110,9 +117,9 @@ form input {
 .mediaDiv {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 70px;
-  margin-top: 100px;
-  padding: 0 100px;
+  gap: 80px;
+  margin-top: 100px;  
+  width: 100%;
 }
 
 .mediaDiv article h2 {
@@ -121,7 +128,7 @@ form input {
 }
 
 .mediaDiv article img {
-  width: 100%;
+  width: 570px;
   height: 500px;
   object-fit: cover;
 }
