--- a/css/photographer.css
+++ b/css/photographer.css
@@ -1,4 +1,4 @@
- body{
+body {
   max-width: 1900px;
   margin-left: auto;
   margin-right: auto;
@@ -9,13 +9,17 @@
   display: none;
 }
 
+#main {
+  padding: 0 100px;
+}
+
 .photograph-header {
   display: flex;
   justify-content: space-between;
   padding: 0 50px;
   align-items: center;
   background-color: #fafafa;
-  height: 300px;  
+  height: 300px;
 }
 
 .photograph-header img {
@@ -117,7 +121,7 @@ form input {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 80px;
-  margin-top: 100px;  
+  margin-top: 100px;
   width: 100%;
 }
 
@@ -126,12 +130,12 @@ form input {
   font-size: 18px;
 }
 
-.mediaDiv article img{
-  width: 570px;
+.mediaDiv article img {
+  width: 510px;
   height: 500px;
   object-fit: cover;
 }
-.mediaDiv article video{
+.mediaDiv article video {
   width: 570px;
   height: 500px;
   object-fit: cover;
