--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,9 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  margin: 0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1900px;
 }
 
 header {
