--- a/css/photographer.css
+++ b/css/photographer.css
@@ -61,19 +61,6 @@ body {
   color: black;
 }
 
-.price {
-  background-color: #db8876;
-  padding: 15px;
-  border-radius: 10px;
-  font-weight: bold;
-  display: flex;
-  justify-content: space-between;
-  width: 200px;
-  position: sticky;
-  left: 90%;
-  bottom: 50%;
-}
-
 .modal {
   border-radius: 5px;
   background-color: #db8876;
@@ -128,7 +115,7 @@ form input {
   border-radius: 5px;
 }
 
-/* Media */
+/* Dev css */
 
 .mediaDiv {
   display: grid;
@@ -152,4 +139,17 @@ form input {
   width: 510px;
   height: 500px;
   object-fit: cover;
+}
+
+.price {
+  background-color: #db8876;
+  padding: 15px;
+  border-radius: 10px 10px 0 0;
+  font-weight: bold;
+  display: flex;
+  justify-content: space-between;
+  width: 200px;
+  position: sticky;
+  left: 90%;
+  bottom: 0;
 }
