add likes on img

--- a/css/photographer.css
+++ b/css/photographer.css
@@ -153,3 +153,9 @@ form input {
   left: 90%;
   bottom: 0;
 }
+
+.img__description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
