--- a/css/photographer.css
+++ b/css/photographer.css
@@ -141,7 +141,7 @@ form input {
   object-fit: cover;
 }
 
-.price {
+.likes__price {
   background-color: #db8876;
   padding: 15px;
   border-radius: 10px 10px 0 0;
