--- a/css/photographer.css
+++ b/css/photographer.css
@@ -73,6 +73,7 @@ body {
   position: absolute;
   left: 25%;
   top: 10%;
+  overflow: hidden;
 }
 
 .modal header {
@@ -113,6 +114,13 @@ form div {
 form input {
   width: 100%;
   height: 68px;
+  border: none;
+  border-radius: 5px;
+}
+
+form textarea {
+  width: 100%;
+  height: 250px;
   border: none;
   border-radius: 5px;
 }
