--- a/css/photographer.css
+++ b/css/photographer.css
@@ -64,7 +64,7 @@ body {
 .modal {
   border-radius: 5px;
   background-color: #db8876;
-  width: 50%;
+  width: 30%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -72,8 +72,8 @@ body {
   justify-content: space-between;
   padding: 35px;
   position: absolute;
-  left: 25%;
-  top: 10%;
+  left: 35%;
+  top: 5%;
   overflow: hidden;
 }
 
@@ -89,13 +89,13 @@ body {
 }
 
 .modal header h2 {
-  font-size: 64px;
+  font-size: 50px;
   font-weight: normal;
   margin: 0;
 }
 
 #modal__name {
-  font-size: 64px;
+  font-size: 50px;
   font-weight: normal;
   margin: 0;
 }
@@ -109,7 +109,7 @@ form {
 
 form label {
   color: #312e2e;
-  font-size: 36px;
+  font-size: 30px;
 }
 
 form div {
@@ -122,10 +122,11 @@ form div {
 
 form input {
   width: 100%;
-  height: 68px;
+  height: 40px;
   border: none;
   border-radius: 5px;
-  font-size: 36px;
+  font-size: 24px;
+  padding-left: 10px;
 }
 
 form textarea {
@@ -195,4 +196,9 @@ form textarea {
 .error {
   display: none;
   color: rgb(255, 255, 255);
+  margin-bottom: 10px;
+}
+
+input {
+  margin-bottom: 10px;
 }
